--- a/index.html
+++ b/index.html
@@ -10,8 +10,30 @@
 </head>
 
 <body>
-    
+    <header>
+        <!-- I want to have an add / delete button to add to or remove old Notes -->
+        <!-- Add a search field to be able to search a title and jump to those notes -->
+    </header>
+        <!-- either we should add 4-5 noteplaceholders here with input fields 
+        OR we just add one input field for notes and add in javascript a blank one once the user saves a new onc
+        OR only generate a new one when the user wants to make a new note -->
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
     <!-- add online scripts here -->
     <script src="./assets/script.js"></script>
 </body>
