CSS to Verification and Home Page

--- a/age-verify.html
+++ b/age-verify.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header>
-        <h1>Drunk trivia</h1>
+        <h1><span class="header-style">||</span> Drunk Trivia <span class="header-style">||</span></h1>
     </header>
     <section>  
         <div id="age-verify-box">
             <div class="verification-form">
-                <h2>Are you 21?</h2>
+                <h2>Are you 21 years of age or older?</h2>
                 <button type="submit" class="submit-btn-yes" onclick="window.location='./index.html';">Yes</button>
-                <button type="submit" class="submit-btn-no" onclick="window.location='https://www.reddit.com/r/PhakeIDs/';">No, but I can be</button>
+                <button type="submit" class="submit-btn-no" onclick="window.location='https://www.reddit.com/r/PhakeIDs/';">No</button>
             </div>    
         </div>
     </section>
