minor HTML/CSS changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
         <!-- Question Section -->
-        <div id="question-section">
+        <div id="question-section" class="question-section">
             <div>
                 <h2 id="question" class="question"></h2>
             </div>
