Updated some ID / Class names so they make more sense

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2 id="drink-name" class="drink-name"></h2>
             </div>
             <div class="button-holder">
-                <button id="trivia-btn" class="trivia-btn button">Get Question</button>
+                <button id="get-question-btn" class="get-question-btn button">Get Question</button>
                 <button id="cocktail-make-btn" class="cocktail-make-btn button">Let's make it 🍺</button>
             </div>
         </div>
