--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Drunk Trivia Home</title>
     <link rel="stylesheet" href="./assets/age-verify-style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Drunk Trivia</title>
 </head>
 
