adding recipe generation

--- a/home.html
+++ b/home.html
@@ -33,10 +33,12 @@
         <div id="drink-info" class="drink-info">
             <div>
                 <h2 id="drink-name" class="drink-name"></h2>
+                <ol id="recipe-list"></ol>
+                <p id="instructions"></p>
             </div>
             <div class="button-holder">
                 <button id="get-question-btn" class="get-question-btn button">Get Question</button>
-                <button id="cocktail-make-btn" class="cocktail-make-btn button" onclick="getRecipeApi()">Let's make it 🍺</button>
+                <button id="cocktail-make-btn" class="cocktail-make-btn button">Let's make it 🍺</button>
             </div>
         </div>
 
@@ -76,7 +78,6 @@
      
     <!-- add online scripts here -->
     <script src="./assets/trivia.js"></script>
-    <script src="./assets/recipe.js"></script>
     
 </body>
 
