some helpful changes

--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
                 <h2>Choose a Category</h2>
             </div>
             <div>
-                <button id="category-1-btn" class="category-btn button" onclick="getVehicleQuestion()">Vehicle Questions</button>
+                <button id="category-1-btn" class="category-btn button" onclick="getVehicleQuestion()">Vehicle Question</button>
                 <button id="category-2-btn" class="category-btn button" onclick="getSportsQuestions()">Sports Questions</button>
                 <button id="category-3-btn" class="category-btn button" onclick="getPoliticsQuestion()">Political Questions</button>
             </div>
