starting trivia.html

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     <header>
             <h1><span class="header-style">||</span><a href="/"> Drunk Trivia </a><span class="header-style">||</span></h1>
      </header>
-    <section>
+    <section class="home-section">
         <!-- Generate Drink Section/Intro section -->
         <div id="generate-drink" class="generate-drink card-container">
             <!-- Intro card with summary of game -->
@@ -33,28 +33,6 @@
                 </div>
 
         </div>
-
-
-
-        <!-- Choose a Category Section -->
-        <div id="category-section" class="category-section">
-            <div>
-                <h2>Choose a Category</h2>
-            </div>
-            <div>
-                <button id="category-1-btn" class="category-btn button" onclick="getVehicleQuestion()">Vehicle Question</button>
-                <button id="category-2-btn" class="category-btn button" onclick="getSportsQuestions()">Sports Questions</button>
-                <button id="category-3-btn" class="category-btn button" onclick="getPoliticsQuestion()">Political Questions</button>
-            </div>
-            <div>
-                <button id="back-to-drink" class="back-to-drink button other-button" onclick="displayDrink(), displayButton()">Back to Drink</button>
-            </div>
-        </div>
-
-
-        
-
-
     </section>
      
     <!-- add online scripts here -->
