--- a/recipe.html
+++ b/recipe.html
@@ -29,7 +29,7 @@
         <div class="photo-card" > 
             <img src=" " class="cocktail-photo" id="cocktail-photo" alt="">  
             <p id="instructions" class="instructions"></p>
-            <button id="trivia-btn" class="trivia-btn button" onclick="chooseCategory()">Trivia Time!</button>
+            <a href="./trivia.html"><button id="trivia-btn" class="trivia-btn button" onclick="">Trivia Time!</button></a>
         </div>
     </div>
 
