--- a/trivia.html
+++ b/trivia.html
@@ -15,27 +15,64 @@
     <header>
         <h1><span class="header-style">||</span> Drunk Trivia <span class="header-style">||</span></h1>
     </header>
+    <!-- category section -->
+    <div class="categorys">
+        <!-- Choose a Category Section -->
+        <div id="category-section" class="category-section">
+            <div>
+                <h2>Choose a Category</h2>
+            </div>
+            <div>
+                <button id="category-1-btn" class="category-btn button" onclick="getVehicleQuestion()">Vehicle Questions</button>
+                <button id="category-2-btn" class="category-btn button" onclick="getSportsQuestions()">Sports Questions</button>
+                <button id="category-3-btn" class="category-btn button" onclick="getPoliticsQuestion()">Political Questions</button>
+            </div>
+            <div>
+                <a href="./recipe.html"><button id="back-to-drink" class="back-to-drink button other-button">Back to Drink</button></a>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- question section -->
+    <div class="questions">
+    <section class="stats-bar">
+        <!-- Display for the current subject -->
+        <div class="stats-card">
+            <h3>Placeholder Subject</h3>
+        </div>
+        <!-- Display for the current number of drinks taken -->
+        <div class="stats-card">
+            <h3>Drinks: </h3>
+        </div>
+        <!-- Display for the current score -->
+        <div class="stats-card">
+            <h3>Score: </h3>
+        </div>
+    </section> 
     <!-- Question Section -->
-    <div id="question-section" class="question-section">
-        <div>
-            <h2 id="question" class="question"></h2>
+    <section>
+        <div id="question-section" class="question-section">
+            <div>
+                <h2 id="question" class="question"></h2>
+            </div>
+            <div class="answer-buttons">
+                <button id="answer-1-btn" class="answer-btn button"></button>
+                <button id="answer-2-btn" class="answer-btn button"></button>
+                <button id="answer-3-btn" class="answer-btn button"></button>
+                <button id="answer-4-btn" class="answer-btn button"></button>
+            </div>
+            <!-- Next Question Button After Question is Answered -->
+            <div>
+                <button id="back-to-drink" class="back-to-drink button other-button"
+                    onclick="displayDrink(), displayButton()">Back to Drink</button>
+                <button id="next-question-btn" class="next-question-btn button other-button" onclick="chooseCategory()">Next
+                    Question</button>
+            </div>
         </div>
-        <div class="answer-buttons">
-            <button id="answer-1-btn" class="answer-btn button"></button>
-            <button id="answer-2-btn" class="answer-btn button"></button>
-            <button id="answer-3-btn" class="answer-btn button"></button>
-            <button id="answer-4-btn" class="answer-btn button"></button>
-        </div>
-        <!-- Next Question Button After Question is Answered -->
-        <div>
-            <button id="back-to-drink" class="back-to-drink button other-button"
-                onclick="displayDrink(), displayButton()">Back to Drink</button>
-            <button id="next-question-btn" class="next-question-btn button other-button" onclick="chooseCategory()">Next
-                Question</button>
-        </div>
+    </section>
     </div>
     <script src="./assets/trivia.js"></script>
-    <script src="./assets/recipe.js"></script>
 </body>
 
 </html>
