small bug fix for question icons showing on category screen

--- a/trivia.html
+++ b/trivia.html
@@ -53,8 +53,8 @@
 
     
     <!-- Question Section -->
-    <section>
-        <div id="question-section" class="question-section">
+    <section id="question-section" class="hidden">
+        <div class="question-section">
             <div>
                 <h2 id="question" class="question"></h2>
             </div>
