--- a/home.html
+++ b/home.html
@@ -36,8 +36,7 @@
     </section>
      
     <!-- add online scripts here -->
-    <script src="./assets/trivia.js"></script>
-    <script src="./assets/recipe.js"></script>
+    <script src="./assets/home.js"></script>
     
 </body>
 
