comments added to code

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="age-verify-box">
             <div class="verification-form">
                 <h2>Are you 21 years of age or older?</h2>
+                <!-- Added buttons for if the user is of age they will be presented with the Application and if they are not they will be taken to a reddit page to get a fake ID to play the game -->
                 <button type="submit" class="submit-btn-yes" onclick="window.location='./home.html';">Yes</button>
                 <button type="submit" class="submit-btn-no"
                     onclick="window.location='https://www.reddit.com/r/PhakeIDs/';">No</button>
