--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="./node_modules/bulma/css/bulma.css">
     <link rel="stylesheet" href="./assets/age-verify-style.css" />
 
@@ -11,16 +12,16 @@
 </head>
 <body>
     <header>
-        <h1><span class="header-style">||</span> Drunk Trivia <span class="header-style">||</span></h1>
+        <h1><span class="header-style is-responsive">||</span> Drunk Trivia <span class="header-style is-responsive">||</span></h1>
     </header>
     <section class="">
         <div class="has-text-white " id="age-verify-box">
             <div class=" verification-form">
-                <h2 class="content">Are you 21 years of age or older?</h2>
+                <h2 class="title is-2 has-text-white">Are you 21 years of age or older?</h2>
                 <!-- Added buttons for if the user is of age they will be presented with the Application and if they are not they will be taken to a reddit page to get a fake ID to play the game -->
-                <button type="submit" class="button submit-btn-yes" onclick="window.location='./home.html';">Yes</button>
-                <button type="submit" class="button submit-btn-no"
-                    onclick="window.location='https://www.reddit.com/r/PhakeIDs/';">No</button>
+                <button type="submit" class="button is-success is-large is-responsive is-fullwidth is-rounded submit-btn-yes" onclick="window.location='./home.html';">Yes</button>
+                <button type="submit" class="button is-danger is-large is-responsive is-fullwidth is-rounded submit-btn-no"
+                    onclick="window.location='https://www.reddit.com/r/PhakeIDs/'; ">No</button>
             </div>
         </div>
     </section>
