fixed it so when you clink the header it takes you to the index

--- a/recipe.html
+++ b/recipe.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1><span class="header-style">||</span><a href="/"> Drunk Trivia </a><span class="header-style">||</span></h1>
+        <h1><span class="header-style">||</span><a href="./index.html"> Drunk Trivia </a><span class="header-style">||</span></h1>
     </header>
 
     <!-- Generate Question and Recipe Section -->
