--- a/final-score.html
+++ b/final-score.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-            <h1><span class="header-style">||</span><a href="/"> Drunk Trivia </a><span class="header-style">||</span></h1>
+            <h1><span class="header-style">||</span><a href="index.html"> Drunk Trivia </a><span class="header-style">||</span></h1>
      </header>
         <div class="final-score-card">
             <h2 class="final-score">Thanks For Playing!</h2>
