--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-            <h1><span class="header-style">||</span><a href="/"> Drunk Trivia </a><span class="header-style">||</span></h1>
+            <h1><span class="header-style">||</span><a href="./index.html"> Drunk Trivia </a><span class="header-style">||</span></h1>
      </header>
     <section class="home-section">
         <!-- Generate Drink Section/Intro section -->
