--- a/trivia.html
+++ b/trivia.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1><span class="header-style">||</span> Drunk Trivia <span class="header-style">||</span></h1>
+        <h1><span class="header-style">||</span><a href="./index.html"> Drunk Trivia </a><span class="header-style">||</span></h1>
     </header>
     <!-- question section -->
     <div>
