framework to make webpage responsive

--- a/home.html
+++ b/home.html
@@ -16,19 +16,19 @@
     <header>
             <h1><span class="header-style is-responsive">||</span><a href="./index.html"> Drunk Trivia </a><span class="header-style is-responsive">||</span></h1>
      </header>
-    <section class="home-section">
+    <section class="home-section columns is-mobile is-responsive">
         <!-- Generate Drink Section/Intro section -->
-        <div id="generate-drink" class="generate-drink card-container">
+        <div id="generate-drink" class="generate-drink card-container column">
             <!-- Intro card with summary of game -->
-            <div class="landing-card">
-                <h2 class="title is-2 has-text-white card-content">Confused?</h2>
-                <p class="content is-large has-text-white card-content">Well, let me explain. Drunk trivia is a drinking mini-game that proves you with a drink to make at the beginning of the game. After that, you will be given a
+            <div class="landing-card is-responsive">
+                <h2 class="title is-2 has-text-white card-content is-responsive">Confused?</h2>
+                <p class="content is-large has-text-white card-content is-responsive">Well, let me explain. Drunk trivia is a drinking mini-game that proves you with a drink to make at the beginning of the game. After that, you will be given a
                     series of questions if you get the question right then you will be rewarded with 100 points. If you get the question wrong then bottoms up (that means you drink).
                    Now go ahead and see how good of a tipsy trivia master you are!</p>
             </div>
             <!-- Continuation card to get you to the generate drink portion -->
-            <div class="landing-card">
-                <h2 class="title is-2 has-text-white card-content">Time to find out what you're drinking!</h2>
+            <div class="landing-card column">
+                <h2 class="title is-2 has-text-white card-content is-responsive">Time to find out what you're drinking!</h2>
                 <!-- clicking button will take you to recipe tab -->
                 <a href="./recipe.html"><button id="cocktail-generate-btn" class="cocktail-generate-btn button is-large is-rounded is-responsive card-content">Get me drunk 🍺</button></a>
                 </div>
