--- a/recipe.html
+++ b/recipe.html
@@ -26,7 +26,7 @@
             <button id="new-cocktail-btn" class="new-cocktail-btn button is-large is-rounded is-responsive has-text-white" onclick="getNewRecipe()">New Cocktail</button>
         </div>
         <!-- card for image and next drink -->
-        <div class="photo-card" > 
+        <div class="photo-card is-responsive" > 
             <img src=" " class="cocktail-photo" id="cocktail-photo" alt="">  
             <p id="instructions" class="instructions has-text-white"></p>
             <a href="./trivia.html"><button id="trivia-btn" class="trivia-btn button is-large is-rounded is-responsive" onclick="">Trivia Time!</button></a>
