fixing bug of text not showing when hovering on button in recipe.html

--- a/recipe.html
+++ b/recipe.html
@@ -23,7 +23,7 @@
             <h2 class="has-text-white">Your Drink For This Round:</h2>
             <h3 id="drink-name" class="drink-name has-text-white"></h3>
             <ol id="recipe-list" class="recipe-list has-text-white">Ingredients:</ol>
-            <button id="new-cocktail-btn" class="new-cocktail-btn button is-large is-rounded is-responsive has-text-white" onclick="getNewRecipe()">New Cocktail</button>
+            <button id="new-cocktail-btn" class="new-cocktail-btn button is-large is-rounded is-responsive" onclick="getNewRecipe()">New Cocktail</button>
         </div>
         <!-- card for image and next drink -->
         <div class="photo-card is-responsive" > 
